--- a/CSS/tribute.css
+++ b/CSS/tribute.css
@@ -1,9 +1,9 @@
 
-/* .row {
+.row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
-} */
+  padding: 2px 4px ;
+}
 
 /* Create four equal columns that sits next to each other */
 
@@ -11,27 +11,42 @@
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
+  /* display:flex; */
+  /* justify-content: space-between; */
+  /* align-content: center; */
+  /* flex-direction:row; */
 }
 
 .column img {
   margin-top: 8px;
   vertical-align: middle;
+  /* align-content: center; */
   width: 100%;
 }
-
+.center {
+  margin:auto;
+  width:50%;
+  padding:10px;
+  text-align: center;
+}
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 300px) {
   .column {
     flex: 50%;
     max-width: 50%;
+    /* max-height: 45%;
+    top:45%;
+    right: 45%;
+    overflow: visible; */
   }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 300px) {
   .column {
     flex: 100%;
     max-width: 100%;
+
   }
 }
 
@@ -48,6 +63,7 @@ background-color: #fff5e6;
   /* padding:5px; */
   background-color: #fff5e6;
   border-radius: 50px;
+  justify-content: center;
 }
 
 #image  {
@@ -58,6 +74,10 @@ background-color: #fff5e6;
  margin-right: auto;
 
  }
+ #tribute-link{
+   color: #CC0000;
+   font-weight:bold;
+ }
  #tribute-info{
    background-color: #fff5e6;
  }
@@ -67,7 +87,6 @@ h1{
   font-size: 30px;
   font-weight: bold;
 font-family: monospace ;
-
 border-radius: 100px;
 }
 h2{
